# UNDERTALE-Undynes-Target-Practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/Darwin/: Info.plist  icon.icns
Assets/Linux/: AppRun  Undyne's Target Practice.desktop
Assets/Source/: soul.ase  spears.ase
CMake/: AddRaylib.cmake  AddRaylibCpp.cmake  GetAssets.cmake  MakeAppBundle.cmake
Dependencies/Orion/: CMakeLists.txt
Dependencies/Orion/CMake/: AddRaylib.cmake  AddRaylibCpp.cmake  GetDependencies.cmake
Dependencies/Orion/Source/: Sprite.cpp
Dependencies/Orion/Source/Include/Orion/: Application.hpp  GameObject.hpp  GetAspectRatio.hpp  Object.hpp  OperatingSystem.hpp  SceneCollection.hpp  Sprite.hpp
Source/: Application.cpp  Application.hpp  DumbObject.hpp  DummyScene.hpp  GameObject.hpp  GetAspectRatio.hpp  Globals.hpp  IsDebug.hpp  IsOperatingSystem.hpp  Main.cpp  Object.hpp  RandomString.hpp  ResourcePath.hpp  Scene.hpp  SceneCollection.hpp  Sprite.cpp  Sprite.hpp
